4243045_fr_FR_03_05/allow-apk-egress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-apk-egress
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0  # Accès à Internet
      ports:
        - protocol: TCP
          port: 443  # HTTPS
        - protocol: TCP
          port: 80
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
